pipeline/event-listener.yaml
apiVersion: v1
kind: Service
metadata:
  name: el-hello-web-listener
  namespace: hello-web-namespace
spec:
  type: ClusterIP
  selector:
    eventlistener: hello-web-listener
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
